--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,3 @@
-MONGODB_URI="mongodb://nameofmongodbcontainer/wanderlust"
+MONGODB_URI="mongodb://mongo/wanderlust"
 #REDIS_URL="127.0.0.1:6379"
-CORS_ORIGIN="http:ipaddressofec2:5173"
+CORS_ORIGIN="http:13.127.182.14:5173"
